--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-SQLAlchemy==1.4.47             # ORM для работы с базой данных
 Flask==2.2.3                   # Веб-фреймворк 
 Flask-SQLAlchemy==2.5.1        # Расширение для интеграции SQLAlchemy с Flask
+SQLAlchemy==1.4.47             # ORM для работы с базой данных
 requests==2.28.1               # Библиотека для работы с HTTP-запросами
-
-
-Faker~=30.8.1
+Faker~=30.8.1                  # Библиотека для генерации фейковых данных
+pandas==1.5.3                  # Библиотека для анализа данных и работы с Excel
+openpyxl==3.0.10               # Библиотека для работы с Excel-файлами
